--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,14 +48,15 @@ html,body{
 }
 
 .post{
-  font-size: 23px;
-  padding: 30px 25px;
+  font-size: 25px;
+  padding: 37px 33px;
   position: relative;
-  width: 795px;
+  width: 882px;
   min-height: 116px;
   background-color: #ffcc8040;
   margin-bottom: 23px;
-  border-radius: 24px;
+  border-radius: 15px;
+  border: 1.5px solid #bd6565;
 }
 
 #icons{
